[tool.poetry]
name = "nlplot"
version = "0.1.0"
description = ""
authors = ["Will Sena <wllsena@protonmail.com>"]
license = "apache"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
torch = "^1.11.0"
transformers = "^4.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
